<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/gradient_col"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="35dp"
        android:fontFamily="cursive"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/course_finder" />

    <TextView
        android:id="@+id/textView4"
        android:textStyle="italic"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_ultimate_reliable_course_buddy" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        app:srcCompat="@drawable/school_ico" />

    <Button
        android:layout_marginTop="25dp"
        android:id="@+id/btnTVET"
        android:background="@drawable/btns_layout"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvet_colleges" />

    <Button
        android:id="@+id/btnUniTech"
        android:background="@drawable/btns_layout"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_height="wrap_content"
        android:text="@string/university_of_tech" />

    <Button
        android:id="@+id/btnUni"
        android:background="@drawable/btns_layout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/universities" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            app:itemTextColor="#ffffff"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient_col"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            app:menu="@menu/nav_items"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </RelativeLayout>


</LinearLayout>