<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#E62828"
    android:layout_height="match_parent"
    tools:context=".Public_Colleges">

    <TextView
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#530404"
        android:fontFamily="@font/alike_angular"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/public_colleges" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="25dp">

            <Button
                android:id="@+id/btnProv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="onFilterSelected"
                android:background="#530404"
                android:text="@string/filter_by_province"
                android:textStyle="bold"
                android:textColor="#FFFFFF"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            app:cardElevation="25dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btnSearch"
                android:onClick="onSearchSelected"
                android:background="#530404"
                android:text="@string/search_for_college_by_name"
                android:textStyle="bold"
                android:textColor="#FFFFFF"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginRight="5dp"
        android:id="@+id/rvProv"
        android:layout_marginLeft="10dp"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            app:itemTextColor="#ffffff"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient_col"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            app:menu="@menu/nav_items"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </RelativeLayout>




</LinearLayout>