<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:background="@drawable/gradient_col"
            android:layout_height="0dp"
            android:layout_weight="2"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/linden_hill"
            android:text="TVET Colleges"
            android:layout_marginBottom="5dp"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/andada"
            android:text="@string/tvet_descriptions"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <Button
                    android:id="@+id/btnPubCollege"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#530404"
                    android:text="Public College"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <Button
                    android:id="@+id/btnPrivateCollege"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#530404"
                    android:text="Private College"
                    android:textStyle="bold"
                    android:textColor="#FFFFFF"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp"
            android:elevation="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp">

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/classroom" />
                </RelativeLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/find_nearest_college"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/layout_two"
                    android:textColor="#9A2222"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/layout_two"
                    android:text="Verify College Accreditation"
                    android:textColor="#9A2222"/>

                <Button
                    android:layout_width="match_parent"
                    android:id="@+id/btnFacts"
                    android:layout_height="wrap_content"
                    android:background="@drawable/layout_two"
                    android:text="@string/tvet_fact_check"
                    android:textColor="#9A2222"/>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            app:itemTextColor="#ffffff"
            android:layout_marginTop="5dp"
            android:background="@drawable/gradient_col"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            app:menu="@menu/nav_items"></com.google.android.material.bottomnavigation.BottomNavigationView>
    </LinearLayout>

</RelativeLayout>